--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "deploy": "rm -rf build && cd .. && npm run build --prod  && cp -r build ./meme-hub-server && cd ./meme-hub-server"
+    "build": "rm -rf build && cd .. && npm run build --prod  && cp -r build ./meme-hub-server && cd ./meme-hub-server",
+    "deploy:full": "npm run build && git add . && git commit -m uibuild && git push && npm run deploy",
+    "deploy": "git push heroku main"
   },
   "author": "",
   "license": "ISC",
