--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "build": "rm -rf build && cd .. && npm run build --prod  && cp -r build ./meme-hub-server && cd ./meme-hub-server",
     "deploy:full": "npm run build && git add . && git commit -m uibuild && git push && npm run deploy",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku master"
   },
   "author": "",
   "license": "ISC",
