--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "node": "15.11"
   },
   "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "build": "rm -rf build && cd .. && npm run build --prod  && cp -r build ./meme-hub-server && cd ./meme-hub-server",
     "deploy:full": "npm run build && git add . && git commit -m uibuild && git push && npm run deploy",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
