--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rm -rf build && cd .. && npm run build --prod  && cp -r build ./meme-hub-server && cd ./meme-hub-server",
     "deploy:full": "npm run build && git add . && git commit -m uibuild && git push && npm run deploy",
     "deploy": "git push heroku master",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
